bk_ida/gccida/c1/find_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1458:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v10; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1482:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v34; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1483:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v35; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1488:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v40; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1489:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v41; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1497:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v49; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1498:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v50; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1503:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v55; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1504:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v56; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1564:27: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v9 = *( int *)( ( char *)&allocno_0->reg + v8); 
                          ^~~~~~~~~
                          allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1571:88: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v108 = ( unsigned __int64)*( _DWORD *)cfun->emit->x_regno_reg_rtx[*( int *)( ( char *)&allocno_0->reg + v8)] >> 16; 
                                                                                       ^~~~~~~~~
                                                                                       allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1572:93: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v11 = ( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[*( int *)( ( char *)&allocno_0->reg + v8)]); 
                                                                                            ^~~~~~~~~
                                                                                            allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1186:24: note: expanded from macro 'BYTE2'
#define BYTE2(x) BYTEn(x, 2)
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1142:34: note: expanded from macro 'BYTEn'
#define BYTEn(x, n) (*((_BYTE*)&(x)+n))
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1578:28: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( !*( int *)( ( char *)&allocno_0->calls_crossed + v8) ) 
                           ^~~~~~~~~
                           allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1582:49: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v13 = v109 | *( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->hard_reg_conflicts + v8); 
                                                ^~~~~~~~~
                                                allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1584:42: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v14 = *( HARD_REG_ELT_TYPE *)( ( char *)&allocno_0->regs_someone_prefers + v8) | v13 | ~regs_used_so_far; 
                                         ^~~~~~~~~
                                         allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1585:94: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v107 = ( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[*( int *)( ( char *)&allocno_0->reg + v8)]); 
                                                                                             ^~~~~~~~~
                                                                                             allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1186:24: note: expanded from macro 'BYTE2'
#define BYTE2(x) BYTEn(x, 2)
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1142:34: note: expanded from macro 'BYTEn'
#define BYTEn(x, n) (*((_BYTE*)&(x)+n))
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1596:83: error: use of undeclared identifier 'machine_mode'
if ( !_bittest64( ( const __int64 *)&v14, v17) && ix86_hard_regno_mode_ok( v17, ( machine_mode)v11) ) 
                                                                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1601:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = ( ( unsigned int)( mode_class_0[( unsigned int)v11] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:1655:50: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v26 = ~v14 & *( HARD_REG_ELT_TYPE *)( ( _BYTE *)&allocno_0->hard_reg_copy_preferences + v104); 
                                                 ^~~~~~~~~
                                                 allocno
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_reg/src/obj/global.o] Error 1
